--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-librosa
-numpy
-opencv-contrib-python
-opencv-python
-tqdm
-numba
-resampy
+librosa==0.10.2.post1
+numpy==2.0.2
+opencv-contrib-python==4.10.0.84
+opencv-python==4.10.0.84
+tqdm==4.66.5
+numba==0.60.0
+resampy==0.4.3
